refactor(exprs): move over binary functions (#4398)
## Changes Made

<!-- Describe what changes were made and why. Include implementation
details if necessary. -->

## Related Issues

<!-- Link to related GitHub issues, e.g., "Closes #123" -->

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -41,6 +41,9 @@ tokio = {workspace = true}
 tokio-util = {workspace = true}
 tracing = {workspace = true}
 
+[dev-dependencies]
+daft-functions = {path = "../daft-functions", default-features = false}
+
 [features]
 python = [
   "dep:pyo3",
