--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -89,7 +89,11 @@ jobs:
       if: ${{ (runner.os == 'Linux') }}
       run: |
         maturin develop
-        pytest tests/dataframe
+        pytest --ignore tests/integration --collect-only -qq # run this to ensure no weird imports that result in `Collector` errors
+        pytest --cov=daft --ignore tests/integration --durations=50
+        coverage combine -a --data-file='.coverage' || true
+        mkdir -p report-output
+        coverage xml -o ./report-output/coverage-${{ join(matrix.*, '-') }}.xml
       env:
         CARGO_TARGET_DIR: ./target
 
@@ -101,7 +105,12 @@ jobs:
       run: |
         cargo llvm-cov clean --workspace
         maturin develop
-        pytest tests/dataframe
+        pytest --ignore tests/integration --collect-only -qq # run this to ensure no weird imports that result in `Collector` errors
+        pytest --cov=daft --ignore tests/integration --durations=50
+        coverage combine -a --data-file='.coverage' || true
+        mkdir -p report-output
+        coverage xml -o ./report-output/coverage-${{ join(matrix.*, '-') }}.xml
+        cargo llvm-cov report --lcov --output-path report-output/rust-coverage-${{ join(matrix.*, '-') }}.lcov
       env:
         # output of `cargo llvm-cov show-env --export-prefix`
         RUSTFLAGS: -C instrument-coverage --cfg=coverage --cfg=coverage_nightly --cfg=trybuild_no_target
