--- a/src/daft-functions-json/Cargo.toml
+++ b/src/daft-functions-json/Cargo.toml
@@ -3,8 +3,7 @@ common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 jaq-core = {workspace = true}
-jaq-interpret = {workspace = true}
-jaq-parse = {workspace = true}
+jaq-json = {workspace = true, features = ["serde_json"]}
 jaq-std = {workspace = true}
 serde = {workspace = true}
 serde_json = {workspace = true}
