--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ daft-functions-list = {path = "src/daft-functions-list", default-features = fals
 daft-functions-serde = {path = "src/daft-functions-serde", default-features = false}
 daft-functions-temporal = {path = "src/daft-functions-temporal", default-features = false}
 daft-functions-tokenize = {path = "src/daft-functions-tokenize", default-features = false}
+daft-functions-uri = {path = "src/daft-functions-uri", default-features = false}
 daft-functions-utf8 = {path = "src/daft-functions-utf8", default-features = false}
 daft-hash = {path = "src/daft-hash", default-features = false}
 daft-image = {path = "src/daft-image", default-features = false}
@@ -176,6 +177,7 @@ members = [
   "src/daft-functions-binary",
   "src/daft-functions-json",
   "src/daft-functions-list",
+  "src/daft-functions-uri",
   "src/daft-functions-tokenize",
   "src/daft-functions-utf8",
   "src/daft-functions-temporal",
@@ -234,6 +236,7 @@ daft-functions-json = {path = "src/daft-functions-json"}
 daft-functions-list = {path = "src/daft-functions-list"}
 daft-functions-temporal = {path = "src/daft-functions-temporal"}
 daft-functions-tokenize = {path = "src/daft-functions-tokenize"}
+daft-functions-uri = {path = "src/daft-functions-uri"}
 daft-functions-utf8 = {path = "src/daft-functions-utf8"}
 daft-hash = {path = "src/daft-hash"}
 daft-local-execution = {path = "src/daft-local-execution"}
