--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -11,8 +11,8 @@ common-tracing = {path = "../common/tracing", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-csv = {path = "../daft-csv", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
-daft-functions = {path = "../daft-functions", default-features = false}
 daft-functions-list = {path = "../daft-functions-list", default-features = false}
+daft-functions-uri = {workspace = true}
 daft-io = {path = "../daft-io", default-features = false}
 daft-json = {path = "../daft-json", default-features = false}
 daft-local-plan = {path = "../daft-local-plan", default-features = false}
@@ -40,9 +40,6 @@ snafu = {workspace = true}
 tokio = {workspace = true}
 tokio-util = {workspace = true}
 tracing = {workspace = true}
-
-[dev-dependencies]
-daft-functions = {path = "../daft-functions", default-features = false}
 
 [features]
 python = [
