--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -653,8 +653,8 @@ jobs:
   integration-test-unity:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    needs:
-    - integration-test-build
+    # needs:
+    # - integration-test-build
     env:
       package-name: daft
     strategy:
@@ -683,26 +683,26 @@ jobs:
       with:
         distribution: 'temurin'
         java-version: '17'
-    - name: Download built wheels
-      uses: actions/download-artifact@v4
-      with:
-        pattern: wheels-*
-        merge-multiple: true
-        path: dist
-    - name: Setup Virtual Env
-      run: |
-        python -m venv venv
-        echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
-        pip install uv
-    - name: Install Daft and dev dependencies
-      uses: nick-fields/retry@v3
-      with:
-        timeout_minutes: 10
-        max_attempts: 3
-        retry_wait_seconds: 10
-        command: |
-          uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
-          rm -rf daft
+    # - name: Download built wheels
+    #   uses: actions/download-artifact@v4
+    #   with:
+    #     pattern: wheels-*
+    #     merge-multiple: true
+    #     path: dist
+    # - name: Setup Virtual Env
+    #   run: |
+    #     python -m venv venv
+    #     echo "$GITHUB_WORKSPACE/venv/bin" >> $GITHUB_PATH
+    #     pip install uv
+    # - name: Install Daft and dev dependencies
+    #   uses: nick-fields/retry@v3
+    #   with:
+    #     timeout_minutes: 10
+    #     max_attempts: 3
+    #     retry_wait_seconds: 10
+    #     command: |
+    #       uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
+    #       rm -rf daft
     - uses: actions/checkout@v4
       with:
         repository: unitycatalog/unitycatalog
@@ -711,13 +711,13 @@ jobs:
         path: unitycatalog
     - name: Start UC Server
       working-directory: ./unitycatalog
-      run: bin/start-uc-server &
-    - name: Run unity integration tests
-      run: |
-        pytest tests/integration/unity -m 'integration or not integration' --durations=50
-      env:
-        DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+      run: bin/start-uc-server
+    # - name: Run unity integration tests
+    #   run: |
+    #     pytest tests/integration/unity -m 'integration or not integration' --durations=50
+    #   env:
+    #     DAFT_RUNNER: ${{ matrix.daft-runner }}
+    #     DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
     - name: Send Slack notification on failure
       uses: slackapi/slack-github-action@v2.0.0
       if: ${{ failure() && (github.ref == 'refs/heads/main') }}
