add new method to get node relationships, and add additional information to runtimecontext

--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -40,6 +40,7 @@ snafu = {workspace = true}
 tokio = {workspace = true}
 tokio-util = {workspace = true}
 tracing = {workspace = true}
+uuid.workspace = true
 
 [features]
 python = [
