--- a/Cargo.toml
+++ b/Cargo.toml
@@ -254,10 +254,9 @@ futures = "0.3.30"
 html-escape = "0.2.13"
 indexmap = "2.1.0"
 itertools = "0.11"
-jaq-core = "1.2.0"
-jaq-interpret = "1.2.0"
-jaq-parse = "1.0.0"
-jaq-std = "1.2.0"
+jaq-core = "2.2.0"
+jaq-json = {version = "1.1.2", features = ["serde_json"]}
+jaq-std = "2.1.1"
 mur3 = "0.1.0"
 num-derive = "0.3.3"
 num-format = "0.4.4"
