--- a/src/daft-local-plan/Cargo.toml
+++ b/src/daft-local-plan/Cargo.toml
@@ -7,6 +7,7 @@ common-treenode = {path = "../common/treenode", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
+daft-micropartition = {path = "../daft-micropartition", default-features = false}
 daft-physical-plan = {path = "../daft-physical-plan", default-features = false}
 log = {workspace = true}
 pyo3 = {workspace = true, optional = true}
@@ -23,7 +24,8 @@ python = [
   "daft-core/python",
   "daft-dsl/python",
   "daft-logical-plan/python",
-  "daft-physical-plan/python"
+  "daft-physical-plan/python",
+  "daft-micropartition/python"
 ]
 
 [lints]
