--- a/src/common/io-config/Cargo.toml
+++ b/src/common/io-config/Cargo.toml
@@ -1,5 +1,5 @@
 [dependencies]
-aws-credential-types = {version = "0.55.3"}
+aws-credential-types = "1.2.3"
 chrono = {workspace = true, features = ["serde"]}
 common-error = {path = "../error", default-features = false}
 common-py-serde = {path = "../py-serde", default-features = false}
