--- a/src/daft-io/Cargo.toml
+++ b/src/daft-io/Cargo.toml
@@ -27,6 +27,7 @@ hyper = "0.14.27"
 hyper-tls = "0.5.0"
 itertools = {workspace = true}
 log = {workspace = true}
+openssl-sys = {version = "0.9.102", features = ["vendored"]}
 pyo3 = {workspace = true, optional = true}
 rand = "0.8.5"
 regex = {version = "1.10.4"}
@@ -64,3 +65,6 @@ workspace = true
 edition = {workspace = true}
 name = "daft-io"
 version = {workspace = true}
+
+[package.metadata.cargo-machete]
+ignored = ["openssl-sys"]
