ci: Add dbg_macro deny in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -347,6 +347,7 @@ cast_possible_truncation = "allow"
 cast_possible_wrap = "allow"
 cast_precision_loss = "allow"
 cognitive_complexity = "allow"
+dbg_macro = "deny"
 default_trait_access = "allow"
 doc-markdown = "allow"
 doc_link_with_quotes = "allow"
