--- a/src/daft-functions-serde/Cargo.toml
+++ b/src/daft-functions-serde/Cargo.toml
@@ -1,5 +1,5 @@
 [dependencies]
-arrow2 = {workspace = true, features = ["io_json_read"]}
+arrow2 = {workspace = true, features = ["io_json_read", "io_json_write"]}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
