--- a/src/daft-recordbatch/Cargo.toml
+++ b/src/daft-recordbatch/Cargo.toml
@@ -12,6 +12,7 @@ daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-functions-list = {path = "../daft-functions-list", default-features = false}
 daft-image = {path = "../daft-image", default-features = false}
 futures = {workspace = true}
+hashbrown = "0.15.4"
 html-escape = {workspace = true}
 indexmap = {workspace = true}
 num-traits = {workspace = true}
