feat: Implement url parse

--- a/src/daft-functions-uri/Cargo.toml
+++ b/src/daft-functions-uri/Cargo.toml
@@ -9,6 +9,7 @@ futures = {workspace = true}
 serde = {workspace = true}
 tokio = {workspace = true}
 typetag = {workspace = true}
+url = {workspace = true}
 uuid = {workspace = true}
 
 [lints]
