--- a/src/daft-distributed/Cargo.toml
+++ b/src/daft-distributed/Cargo.toml
@@ -10,6 +10,7 @@ common-treenode = {path = "../common/treenode", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-local-plan = {path = "../daft-local-plan", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
+daft-scan = {path = "../daft-scan", default-features = false}
 daft-schema = {path = "../daft-schema", default-features = false}
 futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
@@ -30,7 +31,8 @@ python = [
   "common-error/python",
   "common-treenode/python",
   "daft-logical-plan/python",
-  "daft-local-plan/python"
+  "daft-local-plan/python",
+  "daft-scan/python"
 ]
 
 [lints]
