--- a/src/daft-local-plan/Cargo.toml
+++ b/src/daft-local-plan/Cargo.toml
@@ -6,6 +6,7 @@ common-scan-info = {path = "../common/scan-info", default-features = false}
 common-treenode = {path = "../common/treenode", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
+daft-functions-uri = {path = "../daft-functions-uri", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
 daft-physical-plan = {path = "../daft-physical-plan", default-features = false}
 log = {workspace = true}
