--- a/src/daft-logical-plan/Cargo.toml
+++ b/src/daft-logical-plan/Cargo.toml
@@ -17,6 +17,7 @@ daft-functions-list = {path = "../daft-functions-list", default-features = false
 daft-functions-uri = {path = "../daft-functions-uri", default-features = false}
 daft-schema = {path = "../daft-schema", default-features = false}
 derivative = {workspace = true}
+either = "*"
 indexmap = {workspace = true}
 itertools = {workspace = true}
 log = {workspace = true}
