--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ daft-micropartition = {path = "src/daft-micropartition", default-features = fals
 daft-minhash = {path = "src/daft-minhash", default-features = false}
 daft-parquet = {path = "src/daft-parquet", default-features = false}
 daft-physical-plan = {path = "src/daft-physical-plan", default-features = false}
+daft-proto = {path = "src/daft-proto", default-features = false}
 daft-py-runners = {path = "src/daft-py-runners", default-features = false}
 daft-recordbatch = {path = "src/daft-recordbatch", default-features = false}
 daft-scan = {path = "src/daft-scan", default-features = false}
@@ -92,6 +93,7 @@ python = [
   "daft-micropartition/python",
   "daft-parquet/python",
   "daft-physical-plan/python",
+  "daft-proto/python",
   "daft-scan/python",
   "daft-scheduler/python",
   "daft-sql/python",
@@ -191,6 +193,7 @@ members = [
   "src/daft-micropartition",
   "src/daft-parquet",
   "src/daft-physical-plan",
+  "src/daft-proto",
   "src/daft-py-runners",
   "src/daft-scan",
   "src/daft-scheduler",
@@ -242,6 +245,7 @@ daft-hash = {path = "src/daft-hash"}
 daft-local-execution = {path = "src/daft-local-execution"}
 daft-logical-plan = {path = "src/daft-logical-plan"}
 daft-micropartition = {path = "src/daft-micropartition"}
+daft-proto = {path = "src/daft-proto"}
 daft-py-runners = {path = "src/daft-py-runners"}
 daft-recordbatch = {path = "src/daft-recordbatch"}
 daft-scan = {path = "src/daft-scan"}
@@ -268,6 +272,8 @@ parking_lot = "0.12.3"
 path_macro = "1.0.0"
 pretty_assertions = "1.4.1"
 proptest = "1.5.0"
+prost = "0.13.5"
+prost-types = "0.13.5"
 rand = "^0.8"
 rayon = "1.10.0"
 regex = "1.10.4"
@@ -297,6 +303,7 @@ tokio = {version = "1.37.0", features = [
 tokio-stream = {version = "0.1.14", features = ["fs", "io-util", "time"]}
 tokio-util = "0.7.11"
 tonic = "0.12.3"
+tonic-build = "0.12.3"
 tracing = "0.1"
 typed-builder = "0.20.0"
 typetag = "0.2.18"
