chore: remove openssl dependency

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -103,6 +103,14 @@ repos:
     types: [rust]
     pass_filenames: false
 
+  - id: check-for-openssl
+    name: check-for-openssl
+    description: Lint rust sources
+    entry: ./tools/check_for_openssl.sh
+    language: system
+    types: [rust]
+    pass_filenames: false
+
 - repo: https://github.com/abravalheri/validate-pyproject
   rev: v0.19
   hooks:
