--- a/src/common/tracing/Cargo.toml
+++ b/src/common/tracing/Cargo.toml
@@ -3,11 +3,16 @@ common-runtime = {path = "../runtime", default-features = false}
 opentelemetry = {workspace = true}
 opentelemetry-otlp = {workspace = true}
 opentelemetry_sdk = {workspace = true}
-pyo3 = {workspace = true}
+pyo3 = {workspace = true, optional = true}
 tracing = {workspace = true}
 tracing-chrome = "0.7.2"
 tracing-opentelemetry = {version = "0.30", features = ["default"]}
 tracing-subscriber = "0.3"
+
+[features]
+python = [
+  "dep:pyo3"
+]
 
 [lints]
 workspace = true
