updates project structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ python = [
   "daft-functions/python",
   "daft-image/python",
   "daft-io/python",
+  "daft-ir/python",
   "daft-json/python",
   "daft-local-execution/python",
   "daft-local-plan/python",
@@ -94,7 +95,6 @@ python = [
   "daft-micropartition/python",
   "daft-parquet/python",
   "daft-physical-plan/python",
-  "daft-proto/python",
   "daft-scan/python",
   "daft-scheduler/python",
   "daft-sql/python",
