--- a/src/daft-ir/Cargo.toml
+++ b/src/daft-ir/Cargo.toml
@@ -1,8 +1,16 @@
 [dependencies]
+thiserror = { workspace = true }
+common-error = { path = "../common/error", default-features = false }
 daft-dsl = { path = "../daft-dsl" }
 daft-functions = { path = "../daft-functions" }
 daft-logical-plan = { path = "../daft-logical-plan" }
+daft-proto = { path = "../daft-proto" }
 daft-schema = { path = "../daft-schema" }
+prost = { workspace = true }
+pyo3 = { workspace = true, optional = true }
+
+[features]
+python = ["dep:pyo3"]
 
 [lints]
 workspace = true
