--- a/src/daft-writers/Cargo.toml
+++ b/src/daft-writers/Cargo.toml
@@ -1,4 +1,6 @@
 [dependencies]
+arrow-array = {version = "54.2.1"}
+arrow-json = {version = "54.2.1"}
 arrow-schema = {version = "54.2.1"}
 arrow2 = {workspace = true, features = [
   "arrow",
