--- a/src/parquet2/Cargo.toml
+++ b/src/parquet2/Cargo.toml
@@ -6,7 +6,7 @@ futures = {version = "0.3", optional = true}
 indexmap = {workspace = true, features = ["serde"]}
 lz4 = {version = "1.28", optional = true}
 lz4_flex = {version = "^0.9", optional = true}
-parquet-format-safe = "0.2"
+parquet-format-safe = {workspace = true}
 seq-macro = {version = "0.3", default-features = false}
 serde = {version = "^1.0", features = ["derive"]}
 snap = {version = "^1.1", optional = true}
