revert build matrix

--- a/.github/workflows/publish-dev-s3.yml
+++ b/.github/workflows/publish-dev-s3.yml
@@ -52,18 +52,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: [ubuntu]
-        # arch: [x86_64, aarch64]
-        # lts: [false]
-
-        # for testing. remove before merge
-        os: [ubuntu, macos, windows]
+        os: [ubuntu]
         arch: [x86_64, aarch64]
         lts: [false]
-
-        exclude:
-        - os: windows
-          arch: aarch64
 
   publish:
     name: Publish wheels to S3
