chore!: upgrade AWS sdk and remove vendored OpenSSL (#4508)
BREAKING CHANGE: S3Config.verify_ssl and S3Config.check_hostname_ssl
will no longer work. See #4530

## Changes Made

Update the AWS crates to their latest versions, and port our S3 code
over to use those new APIs.

These new versions enable the usage of rustls/aws-lc instead of openssl,
which will allow us to move off of vendoring openssl with the Daft
binary. I've removed OpenSSL and changed all of IO clients to use rustls
instead, which uses either AWS-LC or ring under the hood.

Also changed our ubuntu runners for build to use buildjet because it was
running out of memory.

## Related Issues

none

## Checklist

- [x] Documented in API Docs (if applicable)
- [x] Documented in User Guide (if applicable)
- [x] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [x] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -103,10 +103,10 @@ repos:
     types: [rust]
     pass_filenames: false
 
-  - id: check-for-rustls
-    name: check-for-rustls
+  - id: check-for-openssl
+    name: check-for-openssl
     description: Lint rust sources
-    entry: ./tools/check_for_rustls.sh
+    entry: ./tools/check_for_openssl.sh
     language: system
     types: [rust]
     pass_filenames: false
