--- a/src/daft-io/Cargo.toml
+++ b/src/daft-io/Cargo.toml
@@ -2,16 +2,15 @@
 async-recursion = "1.0.4"
 async-stream = "0.3.6"
 async-trait = {workspace = true}
-aws-config = {version = "0.55.3", features = ["native-tls", "rt-tokio", "client-hyper", "credentials-sso"], default-features = false}
-aws-credential-types = {version = "0.55.3", features = ["hardcoded-credentials"]}
-aws-sdk-s3 = {version = "0.28.0", features = ["native-tls", "rt-tokio"], default-features = false}
-aws-sig-auth = "0.55.3"
-aws-smithy-async = "0.55.3"
-aws-smithy-client = "0.55.3"
-azure_core = "0.17.0"
-azure_identity = "0.17.0"
-azure_storage = {version = "0.17.0", features = ["enable_reqwest"], default-features = false}
-azure_storage_blobs = {version = "0.17.0", features = ["enable_reqwest"], default-features = false}
+aws-config = "1.6.3"
+aws-credential-types = {version = "1.2.3", features = ["hardcoded-credentials"]}
+aws-sdk-s3 = {version = "1.90.0", features = ["default-https-client", "rt-tokio", "sigv4a"], default-features = false}
+aws-smithy-http-client = "1.0.3"
+aws-smithy-runtime-api = "1.8.0"
+azure_core = {version = "0.21.0", features = ["enable_reqwest_rustls", "hmac_rust"], default-features = false}
+azure_identity = {version = "0.21.0", features = ["enable_reqwest_rustls"], default-features = false}
+azure_storage = {version = "0.21.0", features = ["enable_reqwest_rustls"], default-features = false}
+azure_storage_blobs = {version = "0.21.0", features = ["enable_reqwest_rustls"], default-features = false}
 bytes = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 common-file-formats = {path = "../common/file-formats", default-features = false}
@@ -20,19 +19,16 @@ common-runtime = {path = "../common/runtime", default-features = false}
 derive_builder = {workspace = true}
 futures = {workspace = true}
 globset = "0.4"
-google-cloud-storage = {version = "0.22.1", default-features = false, features = ["default-tls", "auth"]}
+google-cloud-storage = {version = "0.24.0", default-features = false, features = ["rustls-tls", "auth"]}
 google-cloud-token = {version = "0.1.2"}
 home = "0.5.9"
-hyper = "0.14.27"
-hyper-tls = "0.5.0"
 itertools = {workspace = true}
 log = {workspace = true}
-openssl-sys = {version = "0.9.102", features = ["vendored"]}
 pyo3 = {workspace = true, optional = true}
 rand = "0.8.5"
 regex = {version = "1.10.4"}
-reqwest-middleware = "0.3.3"
-reqwest-retry = "0.6.1"
+reqwest-middleware = "0.4.2"
+reqwest-retry = "0.7.0"
 retry-policies = "0.4.0"
 serde = {workspace = true}
 snafu = {workspace = true}
@@ -43,8 +39,8 @@ url = {workspace = true}
 
 [dependencies.reqwest]
 default-features = false
-features = ["stream", "native-tls", "json"]
-version = "0.11.18"
+features = ["stream", "json"]
+version = "0.12.19"
 
 [dev-dependencies]
 md5 = "0.7.0"
@@ -65,6 +61,3 @@ workspace = true
 edition = {workspace = true}
 name = "daft-io"
 version = {workspace = true}
-
-[package.metadata.cargo-machete]
-ignored = ["openssl-sys"]
