--- a/src/daft-ir/Cargo.toml
+++ b/src/daft-ir/Cargo.toml
@@ -1,5 +1,7 @@
 [dependencies]
+bincode = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
+common-scan-info = {path = "../common/scan-info", default-features = false}
 daft-dsl = {path = "../daft-dsl"}
 daft-functions = {path = "../daft-functions"}
 daft-logical-plan = {path = "../daft-logical-plan"}
@@ -7,6 +9,7 @@ daft-proto = {path = "../daft-proto"}
 daft-schema = {path = "../daft-schema"}
 prost = {workspace = true}
 pyo3 = {workspace = true, optional = true}
+serde = {workspace = true}
 thiserror = {workspace = true}
 
 [features]
