--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -305,6 +305,9 @@ jobs:
         exclude:
         - daft-runner: native
           flotilla: 1
+    permissions:
+      id-token: write
+      contents: read
     steps:
     - uses: actions/checkout@v4
       with:
