--- a/src/daft-ir/Cargo.toml
+++ b/src/daft-ir/Cargo.toml
@@ -2,6 +2,7 @@
 bincode = {workspace = true}
 common-error = {path = "../common/error", default-features = false}
 common-scan-info = {path = "../common/scan-info", default-features = false}
+daft-core ={ path = "../daft-core" }
 daft-dsl = {path = "../daft-dsl"}
 daft-functions = {path = "../daft-functions"}
 daft-logical-plan = {path = "../daft-logical-plan"}
