--- a/codecov.yml
+++ b/codecov.yml
@@ -6,6 +6,9 @@ ignore:
 - daft/pickle
 - src/arrow2
 - src/parquet2
+- src/parquet-format-safe
+- src/generated
+- src/daft-proto
 
 comment:
   layout: reach, diff, flags, files
