--- a/Cargo.toml
+++ b/Cargo.toml
@@ -310,7 +310,7 @@ tokio-stream = {version = "0.1.14", features = ["fs", "io-util", "time"]}
 tokio-util = "0.7.11"
 tonic = "0.12.3"
 tonic-build = "0.12.3"
-tracing = "0.1"
+tracing = {version = "0.1", features = ["log"]}
 typed-builder = "0.20.0"
 typetag = "0.2.18"
 url = "2.4.0"
