--- a/src/daft-distributed/Cargo.toml
+++ b/src/daft-distributed/Cargo.toml
@@ -17,6 +17,7 @@ futures = {workspace = true}
 pyo3 = {workspace = true, optional = true}
 pyo3-async-runtimes = {workspace = true, optional = true}
 rand = {workspace = true}
+reqwest = {version = "0.12.19", default-features = false, features = ["json"]}
 serde = {workspace = true}
 tokio = {workspace = true}
 tokio-stream = {workspace = true}
