--- a/src/daft-recordbatch/Cargo.toml
+++ b/src/daft-recordbatch/Cargo.toml
@@ -11,6 +11,7 @@ daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-functions-list = {path = "../daft-functions-list", default-features = false}
 daft-image = {path = "../daft-image", default-features = false}
+daft-hash = { path = "../daft-hash", default-features = false }
 futures = {workspace = true}
 html-escape = {workspace = true}
 indexmap = {workspace = true}
